<resources>
    <string name="app_name">AlphabetForKids</string>
    <string name="click">Button</string>
    <string name="a">A</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="i">i</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="l">l</string>
    <string name="m">m</string>
    <string name="n">n</string>
    <string name="o">o</string>
    <string name="p">p</string>
    <string name="button">Button</string>
    <string name="q">q</string>
    <string name="r" />
    <string name="s" />
    <string name="t" />
    <string name="v" />
    <string name="w" />
    <string name="x" />
    <string name="y" />
    <string name="z" />
    <string name="u">U</string>
    <!-- <string name="a">A</string>-->
    <string name="todo">TODO</string>
    <string name="play_sound">Play Sound</string>
</resources>